# copilot-usage

./: README.md  go.mod  main.go  pyproject.toml  usage.py
cmd/: daily.go  editors.go  languages.go  root.go  summary.go  trends.go
copilot_usage/: analysis.py  api.py  auth.py  cli.py  display.py
copilot_usage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
internal/analysis/: metrics.go
internal/api/: client.go  types.go
internal/auth/: auth.go
internal/display/: chart.go  json.go  table.go
