[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-usage"
version = "1.0.0"
description = "GitHub Copilot usage analytics for your organization"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
copilot-usage = "copilot_usage.cli:cli"
